--- a/css/_fonts.css
+++ b/css/_fonts.css
@@ -39,3 +39,20 @@
 	font-style: normal;
 	font-display: swap;
 }
+
+/* Icons */
+@font-face {
+    font-family: 'icons';
+    src: url('../fonts/icons.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    unicode-range: U+F101-F13A;
+}
+
+@font-face {
+    font-family: 'icons';
+    src: url('../fonts/custom-icons.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    unicode-range: U+F13B-F143;
+}
